--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    CONTENT
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <title>UFO</title>
+  </head>
+  <body>
+    <main style="background-color: red; width: 60%; margin-left: 20%; margin-top: 10%;">
+      <div>
+        <h1>404</h1>
+        <p>Page not found</p>
+        <a href="#">Go to home</a>
+      </div>
+      <img src="./ufo.jpg" alt="Cia turetu buti nuotrauka">
+    </main>
+  </body>
 </html>
+
+<!--
+
+    Stiliaus taisykles sablonas:
+    stiliaus savybe: reiksme;
+
+    Elementu tarpusavio atsistumimas:
+
+    margin: 0%;     ---visomis kryptimis
+    margin-left: 0%;
+    margin-top: 0%;
+    margin-right: 0%;
+    margin-bottom: 0%;
+
+-->
