--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <main style="background-color: red; width: 60%; margin-left: 20%; margin-top: 10%;">
-      <div>
+      <div style="width: 30%; background-color: aqua; display: inline-block;">
         <h1>404</h1>
         <p>Page not found</p>
         <a href="#">Go to home</a>
       </div>
-      <img src="./ufo.jpg" alt="Cia turetu buti nuotrauka">
+      <img src="./ufo.jpg" alt="Cia turetu buti nuotrauka" style="width: 60%; display: inline-block;">
     </main>
   </body>
 </html>
@@ -30,5 +30,12 @@
     margin-top: 0%;
     margin-right: 0%;
     margin-bottom: 0%;
+
+    Elementu atvaizdavimo budai:
+
+    display: block;           daugumos elementu pradine reiksme - elementai krenta stulpeliu
+    display: inline;          vos keletas - elementai krenta eilute, su galimybe dalimi persikelti i nauja eilute, jei netilpo
+    display: none;            vos keletas - elementai nesimato/nerodomi
+    display: inline-block;    vos keletas - elementai krenta eilute, bet jei visas netelpa, tai visas krenta i nauja eilute ir niekada nebuna platesnis nei tevinis elementas.
 
 -->
