--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>UFO</title>
   </head>
-  <body>
+  <body style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
     <main style="width: 60%; margin-left: 20%; margin-top: 10%; display: inline-block;">
       <div style="width: 30%; float: left;">
        <h1 style="color: blue; font-size: 100px;">404</h1>
@@ -48,5 +48,7 @@
     display: inline-block; (tevinis elementas)
     width: 100%;
     float: left;
+
+    Visos tekstines stiliaus savybes gali buti paveldetos is teviniu elementu.
 
 -->
