--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div style="width: 30%; float: left;">
        <h1 style="color: blue; font-size: 100px;">404</h1>
         <p style="color: grey; text-transform: uppercase; font-size: 30px;">Page not found</p>
-        <a href="#">Go to home</a>
+        <a href="#" style="border: 2px solid blue; display: inline-block; padding: 10px 40px; text-decoration: none; border-radius: 22px; color: blue;">Go to home</a>
       </div>
       <img src="./ufo.jpg" alt="Cia turetu buti nuotrauka" style="width: 60%; float: right;">
     </main>
@@ -22,6 +22,8 @@
 
     Stiliaus taisykles sablonas:
     stiliaus savybe: reiksme;
+
+    Padding - elementu isputimas
 
     Elementu tarpusavio atsistumimas:
 
@@ -50,5 +52,10 @@
     float: left;
 
     Visos tekstines stiliaus savybes gali buti paveldetos is teviniu elementu.
+
+    Border-radius savybe:
+
+    Maksimaliai apvalinti kampa procentineje israiskoje gali apvalinti nuo 0% iki 50%
+    O px (absoliutus skaiciavimo vienetas) israiskoje gali apvalinti maksimaliai puse savo trumpiausios krastines, patikrinti galim su inspect tools.
 
 -->
