--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   </body>
 </html>
 
+<!-- 
+Ctrl+d keliu tagu pasirinkimas
+Ctrl + / kodo uzkomentavimas 
+Shift + pele kodo pasirinkimas po zodi/eilute
+-->
+
 <!--
 
     Stiliaus taisykles sablonas:
